Updated overwriteModal with darker overlay and position: fixed to have the overlay always covering the whole window when active

--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@
 .colorWhite { color: white; }
 .fontLobster { font-family: 'Lobster', cursive; font-size: 4rem; color:white; }
 .bgRed { background: linear-gradient(90deg, rgba(255,88,88,1) 0%, rgba(255,94,46,1) 100%); }
-.modal { background: rgba(0, 0, 0, 0.8); z-index: 1; position: absolute; right: 0; left: 0; top: 0; bottom: 0; }
+.modal { background: rgba(0, 0, 0, 0.9); z-index: 1; position: fixed; right: 0; left: 0; top: 0; bottom: 0; }
 
 /*
   linear-gradient(90deg, rgb(255, 111, 63) 0%, rgb(255, 59, 0) 100%);
